# DineLytics

./: .dockerignore  .gitignore  Dockerfile  app.py  chat_history.json  conversation.py  docker-compose.yml  main.py  pyproject.toml  query_pipeline.py  readme.md  requirements.txt  schema_loader.py  seed_db.py  seed_pinecone.py
.agent/workflows/: deploy_to_aws.md
dashboard/: README.md
dashboard/src/dashboard/: chat_history.json  chatbot.py  conversational_chatbot.py  create-tasks-agents-config.ipynb  debug_queries.py  sandbox.ipynb  test_pinecone.py
schemas/: delivery_fees_schema.json  optimized_orders_schema.json  optimized_stores_schema.json  optimized_users_schema.json  product_categories_schema.json
services/: code_executor.py  food_search.py  llm.py
src/dashboard/: chat_history.json  conversational_chatbot.py
src/dashboard/callbacks/: agent_callbacks.py  task_callbacks.py
src/dashboard/config/: __init__.py  agents.yaml  schema.yaml  tasks-copy-v1.yaml  tasks.yaml
src/dashboard/memory/: conversation.py
src/dashboard/pipelines/: direct_query_pipeline.py  vector_db_pipeline.py
src/dashboard/schemas/: locations_schema.json  store_tables_schema.json  stores_schema.json
src/dashboard/steps/: process_products.py  store_embeddings.py
src/dashboard/tools/: custom_tool.py  db_search.py  items_finder.py  mongodb_tools.py  python_executor.py  schema_analysis.py
src/dashboard/ui/: chat_interface.py  sidebar.py
src/dashboard/utils/: chat_utils.py  crew_utils.py  utils.py
ui/: chat_interface.py  chat_utils.py  sidebar.py  styles.py
(+19 files in other folders)
