[project]
name = "dashboard"
version = "0.1.0"
description = "DineLytics food delivery analytics dashboard"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-experimental>=0.3.0",
    "pymongo>=4.10",
    "pinecone>=5.4",
    "sentence-transformers>=3.3",
    "streamlit>=1.40",
    "pydantic>=2.8",
    "markdown>=3.0",
]

[project.scripts]
dashboard = "dashboard.main:run"
train = "dashboard.main:train"
replay = "dashboard.main:replay"
test = "dashboard.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
